--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.ekeitho.bubble"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -36,7 +36,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.5.8"
     }
     packagingOptions {
         resources {
@@ -46,20 +46,24 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation("androidx.compose.material:material:1.2.0-alpha04")
-    implementation("androidx.compose.material3:material3:1.0.0-alpha06")
 
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation("androidx.compose.ui:ui-text:$compose_version")
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation platform("androidx.compose:compose-bom:$compose_version")
 
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation "androidx.compose.ui:ui"
+    implementation("androidx.compose.material:material:1.6.0")
+    implementation("androidx.compose.material3:material3:1.1.2")
+
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.ui:ui-text"
+    implementation 'androidx.activity:activity-compose:1.8.2'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.7"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.0"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
 }
